--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,11 @@
 name = "mailing-service"
 version = "0.1.0"
 description = "Сервис управления email рассылками"
-authors = ["Your Name <your@email.com>"]
+authors = ["Sergey <your@email.com>"]
+packages = [{include = "config"}, {include = "mailing"}, {include = "users"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 Django = "^4.2.0"
 psycopg2-binary = "^2.9.0"
 Pillow = "^10.0.0"
